--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.css
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.css
@@ -1,32 +1,71 @@
 .main-bg {
-  background: #D4ECDD;
+  background: #ffffff;
   min-height:100vh;
   padding-top: 88px;
 }
 
 .cl-head {
-  color: black;
-  height:4px;
+  color: #1363bf;
+  height: 1px;
+}
+
+.row1 {
+  border: 1px solid #1363bf;
+  border-radius: 5px;
+  min-height: 400px;
+  max-height: 400px;
+  overflow-y: scroll;
 }
 
 .chatbox {
-  background: rgba(255, 255, 255, 0.05);
-  width: 80%;
-  height: 75%;
-  border-radius: 0.2em;
-  position: relative;
-  box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.1);
+  color: #1363bf;
+  border: 1px solid #1363bf;
+  border-radius: 5px;
+  padding: 20px 10px 20px 20px;
 }
-.chatbox .messages_list {
-  overflow-y: auto;
-  height: 100%;
+
+.leftSide {
+  padding-right: 12px;
+  display: flex;
+  justify-content: flex-end;
 }
+
+.text-left {
+  text-align: left !important;
+}
+
+::placeholder {
+  color: #000;
+}
+
+.row2 input {
+  border: 0;
+  outline: none;
+  margin-top: 20px;
+  padding: 10px 40px;
+  border: 1px solid #1363bf;
+  color: #1363bf;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 5px;
+}
+
+.row2 button {
+  margin-top: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+
+/*
 .chatbox__messages.mine .message-box {
   float: right;
 }
 .chatbox__messages .message-box {
   float: left;
 }
+
 .chatbox .message-box {
   background: rgba(255, 255, 255, 0.2);
   padding: 1em 0;
@@ -36,12 +75,14 @@
   margin: 2em 1em;
   overflow: auto;
 }
+
 .chatbox .message-box > p.name {
   color: rgb(25, 10, 10);
+  font-size: .8em;
+}
+
+.chatbox .message-box > p.message {
+  color: rgb(10, 10, 10);
   font-size: 1em;
 }
-.chatbox .message-box > p.message {
-  color: rgb(18, 11, 11);
-  font-size: 0.7em;
-  margin: 0 2.8em;
-}
+*/
