--- a/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
+++ b/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
@@ -4,7 +4,7 @@
   <div class=" main-bg">
     <div class="container">
       <div>
-        <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#exampleModalCreate" *ngIf="userDetails.isTeacher" style="background-color: #8fc0a9; color:black"><i class="fa fa-plus"></i> <b> Create New Exam</b></button>
+        <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#exampleModalCreate" *ngIf="userDetails.isTeacher" style="background-color: #1363bf; color:white"><i class="fa fa-plus"></i> <b> Create New Exam</b></button>
     </div>
     <br><br>
 
