--- a/FrontEnd/src/app/login/login.component.css
+++ b/FrontEnd/src/app/login/login.component.css
@@ -26,17 +26,20 @@ body {
 .text-j {
   text-align: justify;
 }
-
+/*
+.radio-button {
+  color: #1363bf;
+} */
 
 /* Text Color */
 .text-whitesmoke {
-  color: whitesmoke;
+  color: rgb(0, 0, 0);
 }
 .text-darkyellow {
   color: #FFC017;
 }
 .text-darkgreen {
-  color: #5F7161;
+  color: #1363bf;
 }
 .text-middarkgreen {
   color: #6D8B74;
@@ -50,7 +53,7 @@ body {
 /* Lines */
 
 .line-b {
-  border-bottom: 1px solid #6D8B74 !important;
+  border-bottom: 1px solid #1363bf !important;
 }
 
 /* Buttons */
@@ -59,7 +62,7 @@ body {
 }
 
 .form-button {
-  background-color: #6D8B74;
+  background-color: #1363bf;
   color: #e6e6e6;
 }
 
@@ -71,8 +74,6 @@ body {
 .form-button:active:hover,
 .form-button.active:hover,
 .form-button.active:focus {
-  background-color: #5F7161;
-  border-color: #6D8B74;
   color: #e6e6e6;
 }
 .button-l {
@@ -149,7 +150,7 @@ body {
 /* Bootstrap Form Control Extension */
 .form-control,
 .border-line {
-  background-color: #a09c9c;
+  background-color: #fffafa;
   background-image: none;
   border: 1px solid #424242;
   border-radius: 1px;
@@ -174,7 +175,7 @@ body {
 /* Container */
 
 .container-content {
-  background-color: #D0C9C0;
+  background-color: #e9e9ea;
   color: inherit;
   padding: 15px 20px 20px 20px;
   border-color: #6D8B74;
@@ -189,7 +190,7 @@ button:hover {
 
 /* Backgrounds */
 .main-bg {
-  background: #EFEAD8;
+  background: #ffffff;
   height:100vh;
 }
 
@@ -210,7 +211,7 @@ button:hover {
 }
 
 .logo-badge {
-  color: #D0C9C0;
+  color: #1363bf;
   font-size: 80px;
   font-weight: 800;
   letter-spacing: -10px;
