--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-scroll fixed-top shadow-0 border-bottom border-dark">
   <div class="container">
-    <h1 class="logo"><a class="navbar-brand"></a>!BLINK</h1>
+    <img src="../../assets/image/logo.png" alt="!BLINK" class="logo" width="5%" >&nbsp; &nbsp;<h2 class="mt-3"> BLINK</h2>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#!"><b>Contact</b></a>
         </li>
-        <button type="button" class="btn btn-dark ms-3" routerLink="/login" routerLinkActive="active" *ngIf="!getStatus()" ><b>Sign In</b></button>
+        <button type="button" class="btn btn-light signin ms-3" routerLink="/login" routerLinkActive="active" *ngIf="!getStatus()" ><b>Sign In</b></button>
         <button type="button" class="btn btn-light ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" *ngIf="getStatus()" (click)="getProfile()"><i class="fa fa-user" ></i><b></b></button>
         <button type="button" class="btn btn-light ms-3" (click)="onLogout()" *ngIf="getStatus()"><i class="fas fa-sign-out-alt"></i></button>
       </ul>
