--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -2,7 +2,7 @@
 <div class=" main-bg">
     <div class="container">
         <div>
-            <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#exampleModalJoin" style="background-color: #D0C9C0; color:black"><i class="fa fa-plus"></i> <b> Join New Exam</b></button>
+            <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#exampleModalJoin" style="background-color: #1363bf; color:white"><i class="fa fa-plus"></i> <b> Join New Exam</b></button>
         </div>
         <br><br>
       <div class="row">
@@ -30,7 +30,7 @@
                     <br>
                     <div class="btn-button">
                     <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModalStart" [disabled]="!exam.hasStarted" *ngIf="!examGoingOn(exam)" (click)="onLeaveClick(exam)">Start Exam </button>
-                    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#exampleModalStart" *ngIf="examGoingOn(exam)" (click)="onLeaveClick(exam)"><b>Start Exam</b> </button>  &nbsp;
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModalStart" *ngIf="examGoingOn(exam)" (click)="onLeaveClick(exam)"><b>Start Exam</b> </button>  &nbsp;
                     <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModalLeave" (click)="onLeaveClick(exam)">Leave Exam </button>
                     </div>
                     <div class="widget-49-meeting-action">
