--- a/FrontEnd/src/app/nav-bar/nav-bar.component.css
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.css
@@ -32,14 +32,14 @@ h3 {
 }
 
 .offcanvas-header {
-  background-color: #966767;
+  background-color: #1363bf;
 }
 
 .main-bg {
   padding-left: 10px;
   padding-right: 10px;
   background: rgb(255, 255, 255);
-  background: linear-gradient( #ffffff, #EBD4D4);
+  background: linear-gradient( #ffffff, #1363bf);
   height:100vh;
 }
 
