--- a/FrontEnd/src/app/otp-verification/otp-verification.component.html
+++ b/FrontEnd/src/app/otp-verification/otp-verification.component.html
@@ -4,7 +4,7 @@
       <div>
           <h1 class="logo-badge text-user"><span class="fa fa-user-circle"></span></h1>
       </div>
-          <h3 class="text-darkgreen">Email Verification</h3>
+          <h3 class="text-trust">Email Verification</h3>
           <br>
       <div class="container-content">
           <div>
@@ -12,14 +12,14 @@
           </div>
           <form class="margin-t">
               <div class="form-group mb-3">
-                <label class="text-darkgreen">OTP</label>
+                <label class="text-black">OTP</label>
                 <input type="email" name="email" class="form-control" placeholder="XXXXXX" required="" #email="ngModel" [(ngModel)]="this.model.otp" [ngModelOptions]="{standalone: true}">
               </div>
               <button type="submit" class="btn btn-light form-button button-l margin-b btn-h" style="border: none;" (click)="verify()">Verify</button>
-              <p class="text-whitesmoke text-center"><small>Did not get OTP? </small>
-              <a class="text-darkgreen" (click)="resend()"><small > Resend</small></a></p>
+              <p class="text-black text-center"><small>Did not get OTP? </small>
+              <a class="text-trust" (click)="resend()"><small > Resend</small></a></p>
           </form>
-          <p class="margin-t text-darkgreen"><small> <b> Copyright &copy; 2022 !Blink </b> </small> </p>
+          <p class="margin-t text-trust"><small> <b> Copyright &copy; 2022 !Blink </b> </small> </p>
       </div>
   </div>
   </div>
