otp text non focus background changed to white

--- a/FrontEnd/src/app/otp-verification/otp-verification.component.css
+++ b/FrontEnd/src/app/otp-verification/otp-verification.component.css
@@ -154,7 +154,7 @@ html {
 
   .form-control,
   .border-line {
-    background-color: #a09c9c;
+    background-color: #fffafa;
     background-image: none;
     border: 1px solid #424242;
     border-radius: 1px;
