--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -129,8 +129,8 @@
                 <input type="text" class="form-control" id="recipient-code" placeholder="624db81ef3b5c46536c72936" ngDefaultControl [(ngModel)]="model.examCode" [ngModelOptions]="{standalone: true}" >
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="join()">Join</button>
+                <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="join()">Join</button>
               </div>
             </form>
           </div>
