--- a/FrontEnd/src/user/user.component.html
+++ b/FrontEnd/src/user/user.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper fadeInDown">
-    <div id="formContent">
+<div class="wrapper fadeInDown pt-96 overflow-y-scroll" >
+    <div id="formContent" class=" overflow-y-scroll">
         <router-outlet></router-outlet>
     </div>
 </div>
