--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-scroll fixed-top shadow-0 border-bottom border-dark">
+Navbar
+<nav class="navbar navbar-expand-lg navbar-scroll fixed-top shadow-0 border-bottom border-dark mb-60">
   <div class="container">
     <img src="../../assets/image/logo.png" alt="!BLINK" class="logo" width="5%" >&nbsp; &nbsp;<h2 class="mt-3"> BLINK</h2>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -12,16 +12,19 @@
         <li class="nav-item">
           <a class="nav-link" href="#!"><b>About</b></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#!"><b>Features</b></a>
+        <li class="nav-item" >
+          <a class="nav-link pointer" (click)="goToFeatures()" ><b>Features</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!"><b>Demo</b></a>
+          <a class="nav-link" href="#!" ><b>Demo</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!"><b>Contact</b></a>
+          <a class="nav-link pointer" (click)="goToPricing()" ><b>Pricing</b></a>
         </li>
-        <button type="button" class="btn btn-light signin ms-3" routerLink="/login" routerLinkActive="active" *ngIf="!getStatus()" ><b>Sign In</b></button>
+        <li class="nav-item">
+          <a class="nav-link pointer" ><b>Contact</b></a>
+        </li>
+        <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" routerLink="/login" routerLinkActive="active" *ngIf="!getStatus()" ><b>Sign In</b></button>
         <button type="button" class="btn btn-light ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" *ngIf="getStatus()" (click)="getProfile()"><i class="fa fa-user" ></i><b></b></button>
         <button type="button" class="btn btn-light ms-3" (click)="onLogout()" *ngIf="getStatus()"><i class="fas fa-sign-out-alt"></i></button>
       </ul>
