--- a/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
+++ b/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
@@ -126,8 +126,8 @@
                   <input type="file" class="form-control" id="recipient-duration" placeholder="120" (change)="uploadFile($event)" >
               </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Discard</button>
-                  <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="update()">Save Change</button>
+                  <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">Discard</button>
+                  <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="update()">Save Change</button>
                 </div>
               </form>
             </div>
@@ -206,8 +206,8 @@
               <input type="file" class="form-control" id="recipient-duration" placeholder="120" (change)="uploadFile($event)" >
           </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Discard</button>
-              <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="createExam()">Save</button>
+              <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">Discard</button>
+              <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="createExam()">Save</button>
             </div>
           </form>
         </div>
