video hidden from students

--- a/FrontEnd/src/app/call/components/call/call.component.html
+++ b/FrontEnd/src/app/call/components/call/call.component.html
@@ -6,8 +6,10 @@
                           [stream]="localStream"
                           class="my-video">
         </app-video-player>
-        <app-video-player *ngFor="let user of joinedUsers"
+        <div *ngIf="userx.isTeacher">
+            <app-video-player *ngFor="let user of joinedUsers"
                           [stream]="user.stream">
-        </app-video-player>
+            </app-video-player>
+        </div>
     </div>
 </div>
