--- a/FrontEnd/src/app/user-profile/user-profile.component.html
+++ b/FrontEnd/src/app/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
 <div class=" main-bg">
   <br> <br>
   <div>
-    <h1 class="logo-badge text-center"><span class="fa fa-user-circle"></span></h1>
+    <img [src]="userDetails.photoURL" height="400px" width="400">
     <br>
     <h4 class="text-name">{{userDetails.fullName}}</h4>
   </div>
