--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -41,7 +41,7 @@ Navbar
     <div class=" main-bg">
       <br> <br>
       <div>
-        <h1 class="logo-badge text-center"><span class="fa fa-user-circle"></span></h1>
+        <img [src]="userDetails.photoURL" alt="" style="height: 100px; width: 100px;">
         <br>
         <h4 class="text-name">{{userDetails.fullName}}</h4>
       </div>
