--- a/FrontEnd/src/app/call/components/call/call.component.html
+++ b/FrontEnd/src/app/call/components/call/call.component.html
@@ -4,7 +4,7 @@
         <app-video-player *ngIf="localStream"
                           [mode]="'owner'"
                           [stream]="localStream"
-                          class="my-video">
+                          class="my-video" hidden>
         </app-video-player>
         <div *ngIf="userx.isTeacher">
             <app-video-player *ngFor="let user of joinedUsers"
