--- a/FrontEnd/src/app/conference/conference.component.html
+++ b/FrontEnd/src/app/conference/conference.component.html
@@ -4,6 +4,5 @@
 <br>
 
 <div class="home flex-center">
-    <button (click)="createRoom()">Make a Video call</button>
-    <h3>After click share your link to your friend to make a video call</h3>
+    <button class="btn btn-success" (click)="createRoom()">Go to Conference Room</button>
   </div>
