--- a/FrontEnd/src/app/conference/conference.component.scss
+++ b/FrontEnd/src/app/conference/conference.component.scss
@@ -1,21 +1,18 @@
-.home {
-    height: 100vh;
-    flex-direction: column;
-    padding: 1rem;
-    button {
-      padding: 1rem 1.5rem;
-      text-align: center;
-      cursor: pointer;
-      outline: none;
-      color: #fff;
-      background-color: #04aa6d;
-      border: none;
-      border-radius: 0.5rem;
-      margin-bottom: 1rem;
-    }
+// .home {
+//     padding: 1rem;
+//     button {
+//       padding: 1rem 1.5rem;
+//       text-align: center;
+//       cursor: pointer;
+//       outline: none;
+//       color: #fff;
+//       background-color: #04aa6d;
+//       border: none;
+//       margin-bottom: 1rem;
+//     }
   
-    button:hover {
-      background-color: #3e8e41;
-    }
-  }
+//     button:hover {
+//       background-color: #3e8e41;
+//     }
+//   }
   
