--- a/FrontEnd/src/app/sign-up/sign-up.component.html
+++ b/FrontEnd/src/app/sign-up/sign-up.component.html
@@ -56,7 +56,7 @@
             <div class="form-group mb-4">
               
            
-              <div *ngIf="!isTeacher">
+              <div>
                 <label class="custom-file-upload" for="img">
                   <i class="fa fa-upload"></i>
                   Upload Image
