--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -1,5 +1,6 @@
 <div class="exam">
   <br><br><br>
+  <app-snapshot></app-snapshot>
   <div class="calibrationDiv" *ngIf="!calibrationDone && stepDone >= 5">
 
     <input type="button" (click)="calibrationClick(0)" class="calibration" id="pt1" style="background-color: red; opacity: 0.2">
