after train journey

--- a/FrontEnd/src/app/call/components/call/call.component.html
+++ b/FrontEnd/src/app/call/components/call/call.component.html
@@ -1,33 +1,19 @@
 <div class="call-container row">
-<<<<<<< HEAD
-    <div class="media-area s-12 m-9 l-10"
-         [ngClass]="{'m-12 l-12 full-screen': isHideChat}">
-        <app-video-player *ngIf="localStream"
-                          [mode]="'owner'"
-                          [stream]="localStream"
-                          class="my-video" hidden>
-        </app-video-player>
-        <div *ngIf="userx.isTeacher">
-            <app-video-player *ngFor="let user of joinedUsers"
-                          [stream]="user.stream">
-            </app-video-player>
-        </div>
-=======
   <div
     class="media-area s-12 m-9 l-10"
     [ngClass]="{ 'm-12 l-12 full-screen': isHideChat }"
   >
-    <app-video-player
+    <!-- <app-video-player
       *ngIf="localStream"
       [mode]="'owner'"
       [stream]="localStream"
       class="my-video"
-    >
-    </app-video-player>
+    > 
+    
+    </app-video-player> -->
     <div *ngIf="userx.isTeacher">
       <app-video-player *ngFor="let user of joinedUsers" [stream]="user.stream">
       </app-video-player>
->>>>>>> snapshot
     </div>
   </div>
 </div>
