--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class=" main-bg">
-    <div class="login-container text-c animated flipInX">
+    <div class="pt-64 login-container text-c animated flipInX shadow-md">
       <div>
           <h1 class="logo-badge text-user"><span class="fa fa-user-circle"></span></h1>
       </div>
