--- a/FrontEnd/src/app/conference/conference.component.html
+++ b/FrontEnd/src/app/conference/conference.component.html
@@ -4,11 +4,5 @@
 <br />
 
 <div class="home flex-center">
-<<<<<<< HEAD
-    <button class="btn btn-success" (click)="createRoom()">Go to Conference Room</button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" (click)="createRoom()">Go to Conference Room</button>
   </div>
-=======
-  <button (click)="createRoom()">Make a Video call</button>
-  <h3>After click share your link to your friend to make a video call</h3>
-</div>
->>>>>>> snapshot
