--- a/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
+++ b/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
@@ -97,8 +97,8 @@
         </div>
         <form>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-                <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="examStart(currentExam)">Yes</button>
+                <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">No</button>
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="examStart(currentExam)">Yes</button>
             </div>
         </form>
       </div>
@@ -123,8 +123,8 @@
           </div>
           <form>
               <div class="modal-footer">
-                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-                  <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="leaveExam()">Yes</button>
+                  <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">No</button>
+                  <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="leaveExam()">Yes</button>
               </div>
           </form>
         </div>
