--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,8 @@
 Navbar
 <nav class="navbar navbar-expand-lg navbar-scroll fixed-top shadow-0 border-bottom border-dark mb-60">
   <div class="container">
-    <img src="../../assets/image/logo.png" alt="!BLINK" class="logo" width="5%" >&nbsp; &nbsp;<h2 class="mt-3"> BLINK</h2>
+    <img (click)="goHome()" src="../../assets/image/logo.png" alt="!BLINK" class="logo pointer" width="5%" >&nbsp; &nbsp;
+    <h2  (click)="goHome()" class="mt-3 pointer"> BLINK</h2>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -10,7 +11,7 @@ Navbar
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#!"><b>About</b></a>
+          <a class="nav-link" href="#!"><b>Home</b></a>
         </li>
         <li class="nav-item" >
           <a class="nav-link pointer" (click)="goToFeatures()" ><b>Features</b></a>
