--- a/FrontEnd/src/app/sign-up/sign-up.component.html
+++ b/FrontEnd/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <div class=" main-bg">
-    <div class="login-container text-c animated flipInX">
+    <div class="row-auto login-container text-c animated flipInX shadow-sm">
       <div>
           <h1 class="logo-badge"><span class="fa fa-user-circle"></span></h1>
       </div>
