--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -40,7 +40,7 @@
             <label for="message-text" class="col-form-label" ><h6>Answer:</h6></label>
             <input type="file" class="form-control" id="recipient-duration" placeholder="120" (change)="uploadFile($event)" >
         </div>
-          <button class="btn btn-success" (click)="submitAnswer()">Submit Answer</button>
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" (click)="submitAnswer()">Submit Answer</button>
         </div>
 
         <div class="manual">
@@ -111,7 +111,8 @@
   </div>
 
   <app-eye-track *ngIf="stepDone >= 5"></app-eye-track>
-  <app-call></app-call>
+  <!-- <app-call  ></app-call> -->
+
 
 </div>
 
