--- a/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
+++ b/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="mt-3">
-          <button class="btn btn-danger mt-2" (click)="notificationFilter()">
+          <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" (click)="notificationFilter()">
             <div *ngIf="onlySuspected">All Notification</div>
             <div *ngIf="!onlySuspected">Only Suspected Notification</div>
           </button> &nbsp;
