--- a/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
+++ b/FrontEnd/src/app/teacher-exam-card/teacher-exam-card.component.html
@@ -72,8 +72,8 @@
                 <textarea class="form-control" id="message-text" placeholder="Invitation Message"></textarea>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="invite()">Send invitation</button>
+                <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="invite()">Send invitation</button>
               </div>
             </form>
           </div>
@@ -154,8 +154,8 @@
             </div>
             <form>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-                    <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="delete()">Yes</button>
+                    <button type="button" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal">No</button>
+                    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" data-bs-dismiss="modal" (click)="delete()">Yes</button>
                 </div>
             </form>
           </div>
