--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class=" main-bg">
+<!-- <div class=" main-bg">
     <div class="pt-64 login-container text-c animated flipInX shadow-md">
       <div>
           <h1 class="logo-badge text-user"><span class="fa fa-user-circle"></span></h1>
@@ -22,7 +22,38 @@
           <p class="margin-t text-darkgreen"><small> <b> Copyright &copy; 2022 !Blink </b> </small> </p>
       </div>
   </div>
-  </div>
+  </div> -->
 
 
-  
+   <div class="min-h-screen bg-gradient-to-r from-cyan-500 to-blue-500 ... py-6 flex flex-col justify-center sm:py-12">
+	<div class="relative py-3 sm:max-w-xl sm:mx-auto">
+		<div
+			class="absolute inset-0 bg-gradient-to-r from-blue-300 to-blue-600 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl ">
+		</div>
+		<div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20 w-96 h-96">
+			<div class="max-w-md mx-auto">
+				<div>
+					<h1 class="text-2xl font-semibold">Sign In</h1>
+				</div>
+				<div class="divide-y divide-gray-200">
+					<div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
+						<div class="relative">
+              <!-- <input type="email" name="email" class="form-control" placeholder="Email Address" required="" #email="ngModel" [(ngModel)]="this.model.email" [ngModelOptions]="{standalone: true}"> -->
+							<input type="email" autocomplete="off" id="email" name="email" type="text" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" placeholder="Email address" required="" #email="ngModel" [(ngModel)]="this.model.email" [ngModelOptions]="{standalone: true}" />
+							<label for="email" class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Email Address</label>
+						</div>
+						<div class="relative">
+							<input autocomplete="off" id="password" name="password" type="password" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" placeholder="Password" required="" #password="ngModel" [(ngModel)]="this.model.password" [ngModelOptions]="{standalone: true}" />
+							<label for="password" class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Password</label>
+						</div>
+						<div class="relative">
+							<button class="bg-blue-500 text-white rounded-md px-2 py-1" (click)="signIn()">Submit</button>
+						</div>
+            <p class="text-whitesmoke text-center"><small>Do not have an account? </small>
+            <a href="" class="text-darkgreen" routerLink="signup" (click)="noAccount()"><small >Register</small></a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
